# tampere-js-jsi-example

./: App.tsx  README.md  app.json  package-lock.json  package.json
TampereJsCppModule/: AppTurboModules.podspec  CMakeLists.txt  NativeTampereJsCppModule.cpp  NativeTampereJsCppModule.h  NativeTampereJsCppModule.mm  NativeTampereJsCppModule.ts  TampereJsCppModule.cpp  TampereJsCppModule.h  TampereJsCppModule.podspec
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/java/com/jsi_example/: ReactNativeFlipper.java
android/app/src/main/java/com/jsi_example/: FibonacciModule.java  FibonacciModulePackage.java  MainActivity.java  MainApplication.java  WikipediaResponse.java  WikipediaService.java
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
android/app/src/release/java/com/jsi_example/: ReactNativeFlipper.java
ios/: Podfile
ios/JSI_example/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/JSI_example.xcodeproj/: project.pbxproj
ios/JSI_example.xcodeproj/xcshareddata/xcschemes/: JSI_example.xcscheme
ios/JSI_example.xcworkspace/: contents.xcworkspacedata
ios/JSI_exampleTests/: JSI_exampleTests.m
